--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<title>Planets</title>
+		<link rel="icon" href="img/logo.png" />
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+		/>
 		<link rel="stylesheet" href="style.css" />
 		<link
 			rel="stylesheet"
@@ -16,7 +25,12 @@
 		<nav class="nav">
 			<div class="container">
 				<div class="logo">
-					<a href="#">Your Logo</a>
+					<a href="#"
+						><img
+							class="ct-img"
+							src="./images/iconic-logo.png"
+							alt="Random Logo"
+					/></a>
 				</div>
 				<div id="mainListDiv" class="main_list">
 					<ul class="navlinks">
@@ -541,7 +555,43 @@
 							</div>
 						</div>
 					</div>
-					<div class="swiper-slide"></div>
+					<div class="swiper-slide ctPage">
+						<div class="box box-4">
+							<div class="box-content">
+								<h1 class="ct-h1">
+									<a class="ct-a" href="index.html">
+										<img
+											class="ct-img"
+											src="./images/iconic-logo.png"
+											alt="Random Logo"
+										/>
+									</a>
+								</h1>
+								<h2 class="ct-h2">Contact Us <i class="fa fa-users"></i></h2>
+
+								<h3 class="ct-h3">
+									<i class="fa fa-fw fa-phone"></i>
+									<a href="tel:+1548647525" class="ct-a"> 0329339532 </a><br />
+								</h3>
+								<h3 class="ct-h3">
+									<i class="fa fa-fw fa-envelope"></i
+									><a href="mailto:sample@email.com" class="ct-a">
+										ieltstinder@gmail.com</a
+									>
+								</h3>
+
+								<div class="h-divider">
+									<div class="shadow"></div>
+								</div>
+								<h4 class="ct-h4">
+									Created and Designed by
+									<a href="https://techcracked.000webhostapp.com/" target=""
+										><strong>IELTSTINDER</strong></a
+									>
+								</h4>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 
@@ -554,6 +604,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+		<script src="https://use.fontawesome.com/e2d7675cc1.js"></script>
 		<script src="index.js" type="text/javascript"></script>
 	</body>
 </html>
