--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
 				<div class="text">
 					<h1 class="Name">IELTS TINDER</h1>
 				</div>
-				<div class="text">
-					<h1 class="my-slogan">Get closer-get higher</h1>
+				<p 
+						class="my-slogan typewrite"
+						data-period="2000"
+						data-type='["Get closer-get higher","Get closer-get higher","Get closer-get higher"]'
+					></p>
 				</div>
 			</div>
 		</section>
@@ -600,7 +603,10 @@
 				<div class="planet-links"></div>
 			</div> -->
 		</section>
-
+		<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
