--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 				</div>
 				<div id="mainListDiv" class="main_list">
 					<ul class="navlinks">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Features</a></li>
-						<li><a href="#">Achievements</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="#" data-hover="About">About</a></li>
+						<li><a href="#" data-hover="Features">Features</a></li>
+						<li><a href="#" data-hover="Achievements">Achievements</a></li>
+						<li><a href="#" data-hover="Contact">Contact</a></li>
 					</ul>
 				</div>
 				<span class="navTrigger">
